[package]
name = "nucleotide-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Core type definitions for Nucleotide editor (Layer 1)"
categories = ["text-editors", "gui"]
rust-version = "1.88"

[features]
default = []
gpui-bridge = ["dep:gpui"]
helix-bridge = ["dep:helix-core"]

[dependencies]
# External dependencies only - no cross-crate dependencies
serde = { version = "1.0", features = ["derive"] }
gpui = { git = "https://github.com/zed-industries/zed", rev = "faa45c53d7754cfdd91d2f7edd3c786abc703ec7", optional = true }
helix-core = { git = "https://github.com/helix-editor/helix", tag = "25.07.1", optional = true }