[package]
name = "nucleotide-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Core type definitions for Nucleotide editor (Layer 1)"
categories = ["text-editors", "gui"]
rust-version = "1.88"

[features]
default = []
serde = []
gpui-bridge = ["dep:gpui"]
helix-bridge = ["dep:helix-core"]

[dependencies]
# External dependencies only - no cross-crate dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gpui = { workspace = true, optional = true }
helix-core = { git = "https://github.com/helix-editor/helix", tag = "25.07.1", optional = true }