[package]
name = "nucleotide-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.88"

[dependencies]
nucleotide-types = { workspace = true, features = ["gpui-bridge"] }
nucleotide-events.workspace = true
nucleotide-core = { path = "../nucleotide-core" }
gpui.workspace = true
nucleotide-logging.workspace = true
helix-view.workspace = true
helix-lsp.workspace = true
smallvec.workspace = true
nucleo.workspace = true
anyhow.workspace = true
rust-embed.workspace = true
tokio.workspace = true
