[package]
name = "nucleotide-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.95"

[dependencies]
nucleotide-types = { workspace = true, features = ["gpui-bridge"] }
nucleotide-events.workspace = true
nucleotide-core = { path = "../nucleotide-core" }
nucleotide-process.workspace = true
gpui.workspace = true
nucleotide-logging.workspace = true
helix-core.workspace = true
helix-view.workspace = true
helix-lsp.workspace = true
smallvec.workspace = true
nucleo.workspace = true
anyhow.workspace = true
rust-embed.workspace = true
tokio.workspace = true
pulldown-cmark.workspace = true
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
