[package]
name = "nucleotide-vcs"
version = "0.1.0"
edition = "2021"
description = "Version control system integration for Nucleotide editor"
license = "MPL-2.0"
repository = "https://github.com/mralexgray/nucleotide"

[dependencies]
nucleotide-logging.workspace = true
nucleotide-ui.workspace = true
nucleotide-types.workspace = true
nucleotide-events.workspace = true
helix-vcs = { git = "https://github.com/helix-editor/helix", tag = "25.07.1" }
helix-core = { git = "https://github.com/helix-editor/helix", tag = "25.07.1" }
helix-view = { git = "https://github.com/helix-editor/helix", tag = "25.07.1" }
gpui.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["time", "process"] }

[dev-dependencies]
tempfile = "3.0"