[package]
name = "nucleotide-vcs"
version = "0.1.0"
edition.workspace = true
description = "Version control system integration for Nucleotide editor"
license.workspace = true
repository = "https://github.com/iainh/nucleotide"

[dependencies]
nucleotide-logging.workspace = true
nucleotide-types.workspace = true
nucleotide-events.workspace = true
helix-vcs.workspace = true
helix-core.workspace = true
helix-view.workspace = true
gpui.workspace = true

[dev-dependencies]
