[package]
name = "nucleotide-workspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Workspace backend abstractions for Nucleotide"
categories = ["text-editors", "gui"]
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
ignore.workspace = true
regex.workspace = true
sha2 = "0.10"
tempfile.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
