[package]
name = "nucleotide"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "A native GUI for the Helix editor - main application (Layer 6)"
categories = ["text-editors", "gui"]
rust-version = "1.95"
include = ["src/**/*", "README.md", "nucleotide.example.toml"]
default-run = "nucl"
build = "build.rs"

[features]
default = ["git", "terminal-emulator"]
terminal-emulator = ["terminal-emulator-core"]
terminal-emulator-core = ["nucleotide-terminal/emulator", "nucleotide-terminal-view/emulator"]
terminal-emulator-ghostty = ["terminal-emulator"]
unicode-lines = ["helix-core/unicode-lines"]
integration = ["helix-event/integration_test"]
git = ["helix-vcs/git"]

[[bin]]
name = "nucl"
path = "src/main.rs"

[[bin]]
name = "nucl-grammar"
path = "src/grammar_tool.rs"

[dependencies]
# Internal crates
nucleotide-types = { workspace = true, features = ["gpui-bridge", "helix-bridge"] }
nucleotide-events.workspace = true
nucleotide-logging.workspace = true
nucleotide-appearance.workspace = true
nucleotide-ui.workspace = true
nucleotide-core.workspace = true
nucleotide-lsp.workspace = true
nucleotide-editor.workspace = true
nucleotide-project.workspace = true
nucleotide-env.workspace = true
nucleotide-workspace.workspace = true
nucleotide-remote.workspace = true
nucleotide-process.workspace = true
nucleotide-vcs.workspace = true
nucleotide-terminal = { path = "../nucleotide-terminal" }
nucleotide-terminal-view = { path = "../nucleotide-terminal-view" }
nucleotide-terminal-panel = { path = "../nucleotide-terminal-panel" }

# External dependencies
gpui.workspace = true
gpui_platform.workspace = true

helix-stdx.workspace = true
helix-core.workspace = true
helix-event.workspace = true
helix-view.workspace = true
helix-lsp.workspace = true
helix-vcs = { workspace = true, features = ["git"] }
helix-loader.workspace = true
helix-term.workspace = true

# Dependencies used by extracted code
anyhow.workspace = true
arc-swap.workspace = true
tokio.workspace = true
futures-util.workspace = true
futures-executor = "0.3"

tracing.workspace = true
once_cell.workspace = true
async-trait = "0.1"

# File picker
ignore.workspace = true
indexmap.workspace = true
dirs.workspace = true
image = "0.25.10"
# markdown doc rendering
# file type detection
# file system watching
notify.workspace = true
# embed assets

# opening URLs
url.workspace = true

# config
toml.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono = "0.4"
regex.workspace = true
smallvec.workspace = true
slotmap.workspace = true

# error handling

# macOS integration
[target.'cfg(target_os = "macos")'.dependencies]
ctor.workspace = true
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

# ripgrep for global search

# Unicode handling

[dev-dependencies]
tempfile.workspace = true
slotmap.workspace = true

[build-dependencies]
embed-resource = "3.0"

[package.metadata.bundle]
name = "Nucleotide"
identifier = "org.spiralpoint.nucleotide"
icon = ["assets/nucleotide.ico", "assets/nucleotide.icns"]
version = "0.1.0"
copyright = "Copyright © 2025 Iain H. All rights reserved."
category = "public.app-category.developer-tools"
short_description = "A native GUI for the Helix editor"
resources = ["runtime"]
long_description = """
Nucleotide is a native GUI implementation of the Helix text editor,
built with GPUI (the UI framework from Zed editor). It brings modal
editing to a native GUI application.
"""
